tests/snapshots/integration_tests__detectors@controlled_library_call.cairo.snap
---
source: tests/integration_tests.rs
expression: results
---
[
    Result {
        impact: High,
        name: "controlled-library-call",
        confidence: Medium,
        message: "Library call to user controlled class hash in controlled_library_call::controlled_library_call::TestContract::bad1\n function_call<user@controlled_library_call::controlled_library_call::IAnotherContractLibraryDispatcherImpl::foo>([10], [11], [12], [13], [14]) -> ([6], [7], [8], [9])",
    },
    Result {
        impact: High,
        name: "controlled-library-call",
        confidence: Medium,
        message: "Library call to user controlled class hash in controlled_library_call::controlled_library_call::TestContract::internal_lib_call\n function_call<user@controlled_library_call::controlled_library_call::IAnotherContractLibraryDispatcherImpl::foo>([10], [11], [12], [13], [14]) -> ([6], [7], [8], [9])",
    },
]
