tests/snapshots/integration_tests__detectors@reentrancy.cairo.snap
---
source: tests/integration_tests.rs
expression: results
input_file: tests/detectors/reentrancy.cairo
---
[
    Result {
        impact: Medium,
        name: "reentrancy",
        confidence: Medium,
        message: "Reentrancy in reentrancy::reentrancy::TestContract::bad1\n\tExternal call function_call<user@reentrancy::reentrancy::IAnotherContractDispatcherImpl::foo>([8], [9], [14], [13]) -> ([15], [16], [17]) done in reentrancy::reentrancy::TestContract::bad1\n\tVariable written after function_call<user@reentrancy::reentrancy::TestContract::__member_module_a::InternalContractMemberStateImpl::write>([15], [16], [6], [20]) -> ([21], [22], [23]) in reentrancy::reentrancy::TestContract::bad1.",
    },
    Result {
        impact: Medium,
        name: "reentrancy",
        confidence: Medium,
        message: "Reentrancy in reentrancy::reentrancy::TestContract::bad2\n\tExternal call function_call<user@reentrancy::reentrancy::IAnotherContractDispatcherImpl::foo>([12], [13], [18], [17]) -> ([19], [20], [21]) done in reentrancy::reentrancy::TestContract::bad2\n\tVariable written after function_call<user@reentrancy::reentrancy::TestContract::__member_module_a::InternalContractMemberStateImpl::write>([25], [26], [47], [49]) -> ([50], [51], [52]) in reentrancy::reentrancy::TestContract::bad2.",
    },
    Result {
        impact: Medium,
        name: "reentrancy",
        confidence: Medium,
        message: "Reentrancy in reentrancy::reentrancy::TestContract::bad2\n\tExternal call function_call<user@reentrancy::reentrancy::IAnotherContractDispatcherImpl::foo>([34], [35], [40], [39]) -> ([41], [42], [43]) done in reentrancy::reentrancy::TestContract::bad2\n\tVariable written after function_call<user@reentrancy::reentrancy::TestContract::__member_module_b::InternalContractMemberStateImpl::write>([50], [51], [48], [55]) -> ([56], [57], [58]) in reentrancy::reentrancy::TestContract::bad2.",
    },
    Result {
        impact: Medium,
        name: "reentrancy",
        confidence: Medium,
        message: "Reentrancy in reentrancy::reentrancy::TestContract::bad3\n\tExternal call function_call<user@reentrancy::reentrancy::IAnotherContractDispatcherImpl::foo>([0], [1], [3], [4]) -> ([5], [6], [7]) done in reentrancy::reentrancy::TestContract::internal_ext_call\n\tVariable written after function_call<user@reentrancy::reentrancy::TestContract::__member_module_a::InternalContractMemberStateImpl::write>([13], [14], [6], [18]) -> ([19], [20], [21]) in reentrancy::reentrancy::TestContract::bad3.",
    },
    Result {
        impact: Medium,
        name: "reentrancy",
        confidence: Medium,
        message: "Reentrancy in reentrancy::reentrancy::TestContract::bad4\n\tExternal call function_call<user@reentrancy::reentrancy::IAnotherContractDispatcherImpl::foo>([8], [9], [13], [14]) -> ([15], [16], [17]) done in reentrancy::reentrancy::TestContract::internal_ext_call2\n\tVariable written after function_call<user@reentrancy::reentrancy::TestContract::__member_module_a::InternalContractMemberStateImpl::write>([4], [5], [11], [13]) -> ([14], [15], [16]) in reentrancy::reentrancy::TestContract::bad4.",
    },
    Result {
        impact: Medium,
        name: "reentrancy",
        confidence: Medium,
        message: "Reentrancy in reentrancy::reentrancy::TestContract::bad5\n\tExternal call function_call<user@reentrancy::reentrancy::IAnotherContractDispatcherImpl::foo>([0], [1], [4], [3]) -> ([5], [6], [7]) done in reentrancy::reentrancy::TestContract::bad5[expr9]\n\tVariable written after function_call<user@reentrancy::reentrancy::TestContract::__member_module_a::InternalContractMemberStateImpl::write>([14], [15], [6], [19]) -> ([20], [21], [22]) in reentrancy::reentrancy::TestContract::bad5.",
    },
    Result {
        impact: Low,
        name: "reentrancy-benign",
        confidence: Medium,
        message: "Reentrancy in reentrancy::reentrancy::TestContract::bad2\n\tExternal call function_call<user@reentrancy::reentrancy::IAnotherContractDispatcherImpl::foo>([12], [13], [18], [17]) -> ([19], [20], [21]) done in reentrancy::reentrancy::TestContract::bad2\n\tVariable written after function_call<user@reentrancy::reentrancy::TestContract::__member_module_b::InternalContractMemberStateImpl::write>([50], [51], [48], [55]) -> ([56], [57], [58]) in reentrancy::reentrancy::TestContract::bad2.",
    },
    Result {
        impact: Low,
        name: "reentrancy-benign",
        confidence: Medium,
        message: "Reentrancy in reentrancy::reentrancy::TestContract::bad2\n\tExternal call function_call<user@reentrancy::reentrancy::IAnotherContractDispatcherImpl::foo>([34], [35], [40], [39]) -> ([41], [42], [43]) done in reentrancy::reentrancy::TestContract::bad2\n\tVariable written after function_call<user@reentrancy::reentrancy::TestContract::__member_module_a::InternalContractMemberStateImpl::write>([25], [26], [47], [49]) -> ([50], [51], [52]) in reentrancy::reentrancy::TestContract::bad2.",
    },
]
