tests/snapshots/integration_tests__detectors@reentrancy_events.cairo.snap
---
source: tests/integration_tests.rs
expression: results
input_file: tests/detectors/reentrancy_events.cairo
---
[
    Result {
        impact: Low,
        name: "reentrancy-events",
        confidence: Medium,
        message: "Reentrancy in reentrancy_events::reentrancy_events::TestContract::bad1\n\tExternal call function_call<user@reentrancy_events::reentrancy_events::IAnotherContractDispatcherImpl::foo>([9], [10], [11], [12]) -> ([6], [7], [8]) done in reentrancy_events::reentrancy_events::TestContract::bad1\n\tEvent emitted after function_call<user@reentrancy_events::reentrancy_events::TestContract::ContractStateEventEmitter::emit::<reentrancy_events::reentrancy_events::TestContract::MyEvent, reentrancy_events::reentrancy_events::TestContract::EventMyEventIntoEvent>>([19], [20], [21], [22]) -> ([16], [17], [18]) in reentrancy_events::reentrancy_events::TestContract::bad1.",
    },
]
